<resources>
    <string name="app_name">NoteNest</string>
    <string name="delete_note">Delete Note</string>
    <string name="update_note">Update Note</string>
    <string name="note_id">Note ID</string>
    <string name="view_note">View Note</string>
    <string name="add_note">Add Note</string>
    <string name="note_content">Note Content</string>
    <string name="note_title">Note Title</string>
</resources>